adicionando wrapper .exe